--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ContactBookDb": "Data Source=ContactBook.db"
+    // SQL Server连接字符串（替换为你的数据库地址/账号/密码）
+    "DefaultConnection": "Server=.;Database=ContactDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    // 若用SQLite，替换为："Data Source=ContactDB.db"
   }
 }
